fix: fixed padding space in phone breakpoint
extra padding would create a sliver of space that
allowed horizontal scrolling, so I removed
padding on most elements and resized their
max-widths and included top and bottom
margins.

--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
     --background-shapes-color: rgb(4, 91, 112);
     --html-section-width-desktop: 1700px;
     --html-section-width-tablet: 700px;
-    --html-section-width-mobile: 400px;
+    --html-section-width-mobile: 320px;
 }
 
 *,
@@ -130,7 +130,6 @@ header {
     box-shadow: var(--header-element-box-shadow);
     min-width: 900px;
     min-height: 500px;
-    padding: 30px;
     background-color: white;
 }
 
@@ -304,12 +303,6 @@ footer {
 
 /* tablet breakpoint */
 @media (min-width: 700px) and (max-width: 1100px) {
-    header,
-    main,
-    footer {
-        max-width: var(--html-section-width-tablet);
-    }
-
     .diagonal-shape {
         transform: rotate(-10deg) translateY(-485px) scaleX(5);
     }
@@ -405,7 +398,6 @@ footer {
 
 /* mobile breakpoint */
 @media (max-width: 500px) {
-
     header,
     main,
     footer {
@@ -420,7 +412,6 @@ footer {
 
     .diagonal-shape {
         transform: rotate(328deg) translateY(-643px) scaleX(8);
-
     }
 
     header {
@@ -430,6 +421,7 @@ footer {
         padding: 0;
         max-height: none;
         position: static;
+        margin-top: 20px;
     }
 
     .header-title {
@@ -441,7 +433,6 @@ footer {
         box-shadow: none;
         min-width: 0;
         align-items: center;
-        padding: 15px;
     }
 
     .header-main-text {
@@ -474,7 +465,7 @@ footer {
     }
 
     main {
-        padding: 20px;
+        max-width: 360px;
     }
 
     .main-card-container {
@@ -489,7 +480,8 @@ footer {
         max-width: 377px;
     }
 
-    .card-github-button, .card-open-button {
+    .card-github-button,
+    .card-open-button {
         min-width: 40px;
     }
 
@@ -535,5 +527,13 @@ footer {
         max-height: 500px;
         max-width: 400px;
         min-width: 0;
+        margin-bottom: 20px;
+    }
+
+    header,
+    main,
+    footer {
+        padding: 0;
+        max-width: var(--html-section-width-mobile);
     }
 }
